# trinity

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: test.yml
browser-extension/: README.md  background.js  content-script.js  harness-snippets.js  launchpad-init.js  launchpad.html  manifest.json  page-hook.js  popup.html  popup.js  sidepanel-bridge.js  sidepanel-shell.js  sidepanel.html  sync-pill.js
browser-extension/adapters/: gemini.js
browser-extension/sandbox/: _bridge.js  launchpad-init.js  launchpad.html  live_council.html
design-system/: README.md  SKILL.md  colors_and_type.css
design-system/preview/: badges-pills.html  brand-mark.html  buttons.html  card-accent.html  card-new-model.html  colors-action.html  colors-paper.html  colors-status.html  council-task.html  member-answers.html  radii-shadow.html  routing-bars.html  spacing-scale.html  type-display.html  type-eyebrow-mono.html  type-scale.html
docs/: INSTALL-extension.md  INSTALL-pip.md  INSTALL-skill.md  MCP_REGISTRY_SUBMISSIONS.md  MIGRATION.md  PREFERENCE_CORPUS_SPEC.md  architecture.md  enterprise.md  evals-from-provider.md  green-gate-checklist.md  how-trinity-works.md  index.html  install-deep.md  lens-from-provider.md  lens-redesign.md  lens.md  llms.txt  loop-integration.md  principles.md  product-spec.md  project-lens.md  robots.txt  sitemap.xml  style.css  telemetry-spec.md  three-tier-architecture.md  trust-and-validation.md
docs/articles/: ai-native-way.html  architecture-of-becoming.html  architecture-of-endurance.html  design-the-affordance.html  free-you-more.html  gravity-of-becoming.html  utopia-is-a-mechanism.html
docs/blog/: README.md  SUBMISSION.md  i-asked-three-ais-at-once.md  i-benchmarked-the-models-on-my-own-corrections.md  your-ai-chats-are-training-data.md
docs/historical/: principles.md  retirement-log.md
plugins/trinity-local/: .mcp.json  README.md
schemas/: eval_set.schema.json  rejection_signal.schema.json
scripts/: add_doc_class_frontmatter.py  browser_smoke.py  build_extension_launchpad.py  build_extension_sidepanel.py  bundle_engine.sh  degeneracy_sweep.py  extension_harness.py  install.sh  known_orphans.txt  launch-check.sh  launcher_path_resolver.sh  refresh-vendor.sh  regen_launchpad_example.sh  regen_me_card_example.sh  render_docs.py  render_extension_icons.py  seed_synthetic_home.py  vendor-sha256.txt
skills/trinity/: SKILL.md
src/trinity_local/: agent_emit.py  cold_start.py  config.py  drift.py  (+30 more)
tests/: conftest.py  test_a11y_name_keyboard_global_browser.py  test_agent_emit.py  test_ask.py  test_backend_error_no_path_leak.py  test_background_capture_store.py  test_background_provider_thread_url.py  test_background_sender_gate.py  test_baseline_floor.py  test_basin_split_mega.py  test_basins_empty_cluster.py  test_blast_cap.py  test_bounded_update.py  test_brand_mark.py  test_browser_captured_ingest.py  test_browser_extension_gemini_adapter.py  test_browser_extension_manifest.py  test_browser_extension_standalone_view.py  test_browser_smoke_home_env.py  test_browser_smoke_spin_guard.py  test_bundled_engine_in_sync.py  test_capture_export_parser_resilience.py  test_capture_host_dispatch_argv_safe.py  test_capture_host_error_no_leak_browser.py  test_capture_host_stdio.py  test_chairman_picker.py  test_chapters.py  test_claude_sampling_wireup.py  test_cli_bad_task_id_clean_exit.py  test_cli_cta_strings_resolve.py  test_cli_surface_consolidation.py  test_clobber_guard_propagation.py  test_codex_toml_reinstall_parses.py  test_cold_open.py  test_cold_start.py  test_cold_start_render.py  test_constitution_airgap.py  test_consumer_surface_no_cost_language.py  test_content_script_gemini_sidebar.py  test_contrast_aa_global_browser.py  (+437 more)
(+113 files in other folders)
